--- a/vignettes/homework.Rmd
+++ b/vignettes/homework.Rmd
@@ -2227,6 +2227,111 @@ Windows上跑不了mc.cores
 
 
 ------------------------------------------------------------------------
+## The homework 10 2021-12-02
 
+## Question
+
+- Write an Rcpp function for Exercise 9.8 (page 278, Statistical Computing with R).
+- Compare the corresponding generated random numbers with pure R language using the function `qqplot`.
+- Compare the computation time of the two functions with the function `microbenchmark`.
+- Comments your results
+
+## Answer
+
+
+```
+rm(list=ls())
+
+library(Rcpp)
+
+# Can create source file in Rstudio
+
+cppFunction('NumericMatrix bivariateC(int N,int n,double a,double b,double X0,double Y0) {
+  NumericMatrix X(2,N);
+  NumericVector temp(1);
+  X(0,0) = X0;
+	X(1,0) = Y0;
+	double X1 = 0;
+	double Y1 = 0;
+
+  for(int i=1;i<=N;i++){
+    	Y1 =  X(1,i-1);
+
+      temp =  rbinom(1,n,Y1);
+    	X(0,i) = temp[0];
+
+    	X1 = X(0,i);
+      temp = rbeta(1,X1+a,n-X1+b);
+    	X(1,i) = temp[0];
+	}
+	return X;
+}
+')
+
+
+
+N <- 5000 #链的长度
+burn <- 1000 #burn-in length
+
+###### Mode Parameter #####
+n <- 50
+a <- 1
+b <- 2
+
+###### 产生链的函数 #####
+bivariate.chain <- function(N,n,a,b,X1,Y1){
+  # N个数据点 参数 n,a,b,初值 X1,Y1
+  X <- matrix(0,2,N)
+  X[1,1] <- X1  #初始值
+  X[2,1] <- Y1
+  for (i in 2:N){
+    y2 <- X[2,i-1]
+    X[1,i] <- rbinom(1,n,y2)
+    x2 <- X[1,i]
+    X[2,i] <- rbeta(1,x2+a,n-x2+b)
+  }
+  return(X)
+}
+
+X0 <- 1
+Y0 <- 0.05
+
+```
+
+```
+dataR <- bivariate.chain(N,n,a,b,X0,Y0)
+dataC <- bivariateC(N,n,a,b,X0,Y0)
+
+##Plot 分布
+plot(dataR[1,],dataR[2,],xlab = "x",ylab = "y",main = "Using R")
+plot(dataC[1,],dataC[2,],xlab = "x",ylab = "y",main = "Using Cpp")
+```
+
+```
+alist <- ppoints(1000)
+QRx <- quantile(dataR[1,],alist)
+QCx <- quantile(dataC[1,],alist)
+qqplot(QRx,QCx,main="qqplot for X",xlab = "X:Using R",ylab = "Y:Using Cpp")
+abline(0,1,col="red")
+
+QRy <- quantile(dataR[2,],alist)
+QCy <- quantile(dataC[2,],alist)
+qqplot(QRy,QCy,main="qqplot for Y",xlab = "Y:Using R",ylab = "Y:Using Cpp")
+abline(0,1,col="red")
+```
+
+# Test microbenchmark
+
+```
+library(microbenchmark)
+ts <-microbenchmark(bivariate.chain(N,n,a,b,X0,Y0))
+summary(ts)[,c(1,3,5,6)]
+ts <- microbenchmark(bivariateC(N,n,a,b,X0,Y0))
+summary(ts)[,c(1,3,5,6)]
+```
+我的代码上面不知道为什么会导致`R Session Aborted`,如果可以你可以帮我运行一下
+我自己写了一个测试函数运行时间的代码
+结果显示在R和Rcpp生成的分布差不多，但是Rcpp明显计算快了非常多
+------------------------------------------------------------------------
 
 
